<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Calc</string>
    <string name="hello_world"></string>
    <string name="action_settings">Settings</string>
    <string name="button1">1</string>
    <string name="button2">2</string>
    <string name="button3">3</string>
    <string name="button4">4</string>
    <string name="button5">5</string>
    <string name="button6">6</string>
    <string name="button7">7</string>
    <string name="button8">8</string>
    <string name="button9">9</string>
    <string name="buttonplus">+</string>
    <string name="buttonminus">-</string>
    <string name="buttonmul">*</string>
    <string name="buttonzero">0</string>
    <string name="buttondot">.</string>
    <string name="buttonequal">=</string>
    <string name="buttonback">C</string>
    <string name="buttondiv">/</string>
    <string name="caldisp"></string>
    <string name="text_view_hint">Calculator</string>
    
</resources>
